# TraiderBot

./: .dockerignore  .env.example  .gitignore  API.md  ARCHITECTURE.md  CLAUDE.md  DEPLOY.md  ENVIRONMENT.md  Makefile  README.md  ROADMAP.md  SECURITY_REVIEW.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md  settings.local.json
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 20260419_0001_initial_schema.py
app/: __init__.py  main.py
app/api/: router.py
app/config/: settings.py
app/core/: dependencies.py  exceptions.py  middleware.py  security.py
app/db/: bootstrap.py  session.py
app/execution/: paper.py
app/indicators/: __init__.py  base.py  ma.py  rsi.py  volatility.py
app/ml/: features.py  service.py
app/models/: __init__.py  audit_log.py  bot_settings.py  llm_inference.py  market_snapshot.py  news_event.py  position.py  risk_event.py  signal.py  strategy_config.py  trade.py  user.py  whale_event.py
app/repositories/: analytics.py  base.py  config.py  trading.py  users.py
app/risk/: __init__.py  manager.py
app/schemas/: common.py  config.py  dashboard.py  llm.py  news.py  position.py  signal.py  trade.py  whale.py
app/services/: config_service.py  container.py  llm_service.py  market_data.py  news_service.py  trading_runtime.py  whale_service.py
app/utils/: logging.py  (+3 more)
artifacts/: gbdt_model.joblib
docker/: Caddyfile  Dockerfile
scripts/: bootstrap.ps1  bootstrap.sh  run_tests.sh  setup_local_https.ps1
tests/: test_api.py  test_bybit_adapter.py  test_indicators.py  test_llm_parser.py  test_risk.py  test_runtime_flow.py  test_strategy.py  test_text_utils.py
(+30 files in other folders)
